[tool.poetry]
name = "cantilever-misalignment-interaction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
numpy = "^2.2.1"
pandas = "^2.2.3"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
